feat : 차량목록 페이지 세대공유